update kafka config

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -13,7 +13,7 @@ receiver.kafka.atc.exception.queue=receiver-kafka-db-ack-queue
 receiver.kafka.atc.exception.manual.queue=receiver-kafka-db-abk-manual-queue
 
 #kafka properties
-#spring.kafka.consumer.bootstrap-servers = localhost:9092
+spring.kafka.consumer.bootstrap-servers = b-2.prod-pct-ms2-kafka.6y64h5.c23.kafka.us-east-1.amazonaws.com:9092,b-1.prod-pct-ms2-kafka.6y64h5.c23.kafka.us-east-1.amazonaws.com:9092
 spring.kafka.consumer.group-id= group_id
 spring.kafka.consumer.auto-offset-reset = earliest
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
