--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -13,13 +13,13 @@ receiver.kafka.atc.exception.queue=receiver-kafka-db-ack-queue
 receiver.kafka.atc.exception.manual.queue=receiver-kafka-db-abk-manual-queue
 
 #kafka properties
-spring.kafka.consumer.bootstrap-servers = b-2.prod-pct-ms2-kafka.6y64h5.c23.kafka.us-east-1.amazonaws.com:9092,b-1.prod-pct-ms2-kafka.6y64h5.c23.kafka.us-east-1.amazonaws.com:9092
+spring.kafka.consumer.bootstrap-servers = b-1.stagingpctms2kafka.3hmxhw.c23.kafka.us-east-1.amazonaws.com:9092,b-2.stagingpctms2kafka.3hmxhw.c23.kafka.us-east-1.amazonaws.com:9092
 spring.kafka.consumer.group-id= group_id
 spring.kafka.consumer.auto-offset-reset = earliest
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
-kafka.bootstrapAddress = b-2.prod-pct-ms2-kafka.6y64h5.c23.kafka.us-east-1.amazonaws.com:9092,b-1.prod-pct-ms2-kafka.6y64h5.c23.kafka.us-east-1.amazonaws.com:9092
+kafka.bootstrapAddress = b-1.stagingpctms2kafka.3hmxhw.c23.kafka.us-east-1.amazonaws.com:9092,b-2.stagingpctms2kafka.3hmxhw.c23.kafka.us-east-1.amazonaws.com:9092
 receiver.retry.kafka.queue=retrarkafkaQueue
 receiver.datamigration.queue=receiver-datamigration-queue1
 receiver.datamigration.queue.enabled=true
