update prod conf

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 externalProcess.kafka.process.queue=externalproces-kafka-process-queue
 
-tensorflow.url=http://tensorflow.phillips-connect.net:5000
+tensorflow.url=http://tensorflow.phillips-connect.com
 
 elastic.url=https://search-qa-ms2-es-idbp2srhezi72fnjvn7v6a4lnu.us-east-1.es.amazonaws.com/
 elastic.username=qa-ms2-es
