update prod conf

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,10 +2,10 @@ externalProcess.kafka.process.queue=externalproces-kafka-process-queue
 
 tensorflow.url=http://tensorflow.phillips-connect.com
 
-elastic.url=https://search-qa-ms2-es-idbp2srhezi72fnjvn7v6a4lnu.us-east-1.es.amazonaws.com/
-elastic.username=qa-ms2-es
-elastic.password=Admin@123#
-elastic.destinationindex=device_report_staging_1
+elastic.url=https://vpc-prod-ms2-wahudzaihx6ulzafdrbasljq6e.us-east-1.es.amazonaws.com/
+elastic.username=admin
+elastic.password=3tF#$3~*TpXo
+elastic.destinationindex=device_data_report_*
 
 maintenance.kafka.queue=users
 receiver.kafka.queue=reciever-kafka
